add new website from server na

--- a/xem-phim-moi/cai-gia-cua-su-so-hai/index.html
+++ b/xem-phim-moi/cai-gia-cua-su-so-hai/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1771,18 +1771,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-cua-ingrid" title="Hành Trình Của Ingrid">
+          <a class="list-top-movie-link" href="/phim-moi/anh-hao-nam-thieu-lam" title="Anh Hào Nam Thiếu Lâm">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-cua-ingrid-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-hao-nam-thieu-lam-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hành Trình Của Ingrid
+             Anh Hào Nam Thiếu Lâm
             </span>
             <span class="list-top-movie-item-en">
-             Ingrid Goes West
+             Hero of South Shaolin
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thiet-giap-chi-thanh" title="Thiết giáp chi thành">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thiet-giap-chi-thanh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiết giáp chi thành
+            </span>
+            <span class="list-top-movie-item-en">
+             Kabaneri of the Iron Fortress
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1793,40 +1815,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/anh-chang-shipper-va-co-nang-quy-phi" title="Anh Chàng Shipper Và Cô Nàng Quý Phi">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-chang-shipper-va-co-nang-quy-phi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Anh Chàng Shipper Và Cô Nàng Quý Phi
-            </span>
-            <span class="list-top-movie-item-en">
-             Mr. Express And Miss Concubine
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quai-xe-4" title="Quái Xế 4">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-van-chuyen-ngoai-bien-gioi" title="Người Vận Chuyển Ngoài Biên Giới">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quai-xe-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-van-chuyen-ngoai-bien-gioi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quái Xế 4
+             Người Vận Chuyển Ngoài Biên Giới
             </span>
             <span class="list-top-movie-item-en">
-             Taxi 4
+             Poongsan
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1837,21 +1837,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chien-ham-cuoi-cung-phan-5" title="Chiến Hạm Cuối Cùng (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/ma-bup-be-3" title="Ma búp bê 3">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-ham-cuoi-cung-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-bup-be-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chiến Hạm Cuối Cùng (Phần 5)
+             Ma búp bê 3
             </span>
             <span class="list-top-movie-item-en">
-             The Last Ship (Season 5)
+             Child's Play 3
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1859,21 +1859,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chong-cu" title="Chồng Cũ">
+          <a class="list-top-movie-link" href="/phim-moi/the-underdog-knight" title="The Underdog Knight">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chong-cu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-underdog-knight-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chồng Cũ
+             The Underdog Knight
             </span>
             <span class="list-top-movie-item-en">
-             Ex-Wife Killer
+             The Underdog Knight
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
