add new website from server na

--- a/xem-phim-moi/ngoi-den-ky-quai-4/index.html
+++ b/xem-phim-moi/ngoi-den-ky-quai-4/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             6
             </dd>
             <br/>
            </dl>
@@ -1732,62 +1732,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/detective-conan-love-story-at-police-headquarters-wedding-eve" title="Detective Conan Love Story at Police Headquarters, Wedding Eve">
+          <a class="list-top-movie-link" href="/phim-moi/tyler-rake-nhiem-vu-giai-cuu-2" title="Tyler Rake: Nhiệm Vụ Giải Cứu 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/detective-conan-love-story-at-police-headquarters-wedding-eve-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tyler-rake-nhiem-vu-giai-cuu-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Detective Conan Love Story at Police Headquarters, Wedding Eve
+             Tyler Rake: Nhiệm Vụ Giải Cứu 2
             </span>
             <span class="list-top-movie-item-en">
-             名探偵コナン 本庁の刑事恋物語～結婚前夜～
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/du-chan-everest-va-vu-dong-dat-tai-nepal" title="Dư chấn: Everest và vụ động đất tại Nepal">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/du-chan-everest-va-vu-dong-dat-tai-nepal-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Dư chấn: Everest và vụ động đất tại Nepal
-            </span>
-            <span class="list-top-movie-item-en">
-             Aftershock: Everest and the Nepal Earthquake
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/than-y-dai-nhan-cho-gheo-ta" title="Thần Y Đại Nhân Chớ Ghẹo Ta">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-y-dai-nhan-cho-gheo-ta-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thần Y Đại Nhân Chớ Ghẹo Ta
-            </span>
-            <span class="list-top-movie-item-en">
-             My Fairy Doctor
+             Extraction 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1798,18 +1754,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tien-len-nao-xe-nho-trai-he" title="Tiến lên nào Xe Nhỏ! Trại hè">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-song-gia-dinh-nho" title="Cuộc Sống Gia Đình Nhỏ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tien-len-nao-xe-nho-trai-he-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-song-gia-dinh-nho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tiến lên nào Xe Nhỏ! Trại hè
+             Cuộc Sống Gia Đình Nhỏ
             </span>
             <span class="list-top-movie-item-en">
-             A Go! Go! Cory Carson Summer Camp
+             Simple Days
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1820,21 +1776,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bat-quy" title="Bắt quỷ">
+          <a class="list-top-movie-link" href="/phim-moi/nam-thanh-yen" title="Nam Thành Yến">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bat-quy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nam-thanh-yen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bắt quỷ
+             Nam Thành Yến
             </span>
             <span class="list-top-movie-item-en">
-             Catching Demons
+             南城宴
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/quy-ma-song-tinh" title="Quỷ  Mã Song Tinh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-ma-song-tinh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Quỷ  Mã Song Tinh
+            </span>
+            <span class="list-top-movie-item-en">
+             Games Gamblers Play
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/duong-ve" title="Đường Về">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-ve-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đường Về
+            </span>
+            <span class="list-top-movie-item-en">
+             The Way Way Back
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
